--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,7 +9,17 @@ section {
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100%
+    height: 100%;
+    background: #ccc
+}
+
+.bg-white {
+    height: 30%;
+    width: 100%;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    background: white;
 }
 
 #container {
@@ -22,6 +32,7 @@ section {
     flex-direction: column;
     align-items: flex-end;
     justify-content: flex-end;
+
 }
 
 
@@ -29,8 +40,8 @@ section {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 400px;
+    height: 500px;
 }
 
 .overlay {
