--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,11 +6,11 @@
 
 section {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     width: 100%;
-    height: 100%;
-    background: #ccc
+    background: #ccc;
+    padding: 50px 0
 }
 
 .bg-white {
@@ -33,7 +33,7 @@ section {
     flex-direction: column;
     align-items: flex-end;
     justify-content: flex-end;
-
+    margin-top: 50px
 }
 
 
@@ -157,4 +157,9 @@ img {
     opacity: 1;
     transition: opacity 1s ease-in-out;
 
+}
+
+.card.yellow {
+    background: #F5F079;
+    margin-left: 50px;
 }
