--- a/magazine.css
+++ b/magazine.css
@@ -76,7 +76,7 @@ nav {
 section {
     scroll-snap-align: start;
     height: 100vh;
-    max-width: 850px;
+    /* max-width: 850px; */
     /* height: 600px; */
     /* font-size: 60px; */
     /* overflow: scroll */
@@ -100,13 +100,10 @@ p {
 }
 
 .wealth-div {
-    padding: 0 24px 0 24px
+    padding: 20px 24px 0 24px
 }
 
-.section:nth-of-type(2) {
-    padding: 63.5px 0px;
-    overflow-y: scroll;
-}
+
 
 .scroll-container {
     height: 100vh;
@@ -118,6 +115,10 @@ p {
     -webkit-scroll-snap-type: y mandatory;
     -ms-scroll-snap-type: y mandatory;
     scroll-snap-type: y mandatory;
+}
+
+.carousel-fig:nth-of-type(1) {
+    position: relative;
 }
 
 .wealth-watch-p {
@@ -173,6 +174,7 @@ p {
     /* 29.12px */
     letter-spacing: -1.12px;
     padding-left: 24px;
+    padding-top: 30vh;
 }
 
 .stocks-name {
@@ -218,7 +220,10 @@ p {
     overflow-x: scroll;
     scroll-snap-type: x mandatory;
     padding-top: 17px;
-    margin-left: 24px;
+}
+
+.scroll-carousel li:nth-of-type(1) {
+    padding-left: 24px;
 }
 
 .scroll-carousel li {
@@ -270,7 +275,7 @@ p {
 }
 
 section:nth-of-type(3) {
-    padding-top: 70px;
+    /* padding-top: 70px; */
     /* padding-bottom: 74px; */
 }
 
@@ -279,8 +284,19 @@ section:nth-of-type(3) {
 
 }
 
+.section.wealth {
+    position: relative;
+}
+
+.section.wealth h2 {
+    padding-top: 60px;
+
+}
+
 .card-fig {
     width: 100%;
+    position: absolute;
+    bottom: 0
 }
 
 .card-fig img {
@@ -474,10 +490,188 @@ section:nth-of-type(3) {
 
 .card.yellow {
     background: #F5F079;
-    margin-left: 50px;
+    margin-left: 24px;
 }
 
 .section.news {
     background: #F4F4F4;
     padding: 89px 15px 70px 15px;
+}
+
+
+card {
+    max-width: 358px;
+    background: #ccf4de;
+    overflow: hidden;
+    position: relative;
+    padding-bottom: 58px;
+
+}
+
+.card.equity {
+    padding-bottom: 0;
+    min-height: 621px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.card.equity svg {
+    /* margin-bottom: -50px; */
+}
+
+.card-desc {
+    padding: 40px 34px 0 30px;
+}
+
+#highchart {
+    margin-left: -17px;
+}
+
+.number {
+    color: #000 !important;
+    font-feature-settings: "ss03" on !important;
+    font-family: Approach !important;
+    font-size: 53px !important;
+    font-style: normal !important;
+    padding-bottom: 7px !important;
+    font-weight: 700 !important;
+    line-height: 1.2 !important;
+    /* 63.6px */
+}
+
+.description {
+    color: #012d27;
+    font-family: Approach;
+    font-size: 25px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.2;
+}
+
+@font-face {
+    font-family: Approach;
+    font-weight: 700;
+    font-display: block;
+    font-style: bold;
+    font-named-instance: "bold";
+    src: url("./ApproachBold.ttf");
+}
+
+@font-face {
+    font-family: Approach;
+    font-weight: 400;
+    font-display: block;
+    font-style: normal;
+    font-named-instance: "bold";
+    src: url("./ApproachRg.ttf");
+}
+
+@font-face {
+    font-family: Glitch Demo;
+    font-weight: 400;
+    font-display: block;
+    font-style: normal;
+    src: url("./Glitch.ttf");
+}
+
+.highcharts-root::after {
+    content: " - Remember this";
+    background-color: yellow;
+    color: red;
+    font-weight: bold;
+}
+
+.circle-svg {
+    /* position: absolute; */
+    z-index: 1000;
+    left: -8px;
+    bottom: 60px;
+    stroke-width: 40px;
+    /* opacity: 0 */
+}
+
+
+.highcharts-axis-labels,
+.highcharts-xaxis-labels,
+.highcharts-axis-title,
+.highcharts-xaxis *,
+.highcharts-yaxis-grid *,
+.highcharts-plot-line,
+.highcharts-credits {
+    opacity: 0.01;
+}
+
+.highcharts-point {
+    filter: drop-shadow(0px 1px 1px rgb(0 0 0 / 0.1)) drop-shadow(0px 3px 4px rgb(0 0 0 / 0.1)) drop-shadow(0px 6px 8px rgb(0 0 0 / 0.3));
+}
+
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
+.bar-new {
+    background: #CAF4B7;
+    padding-bottom: 0;
+    max-height: 621px;
+    min-height: 621px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin-top: 24px;
+
+}
+
+.bar-new svg {
+    margin-top: 30px;
+    margin-left: -50px;
+}
+
+
+
+#canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.audio-svg {
+    cursor: pointer;
+    position: absolute;
+    bottom: 22px;
+    right: 18px
+}
+
+.card .fig {
+    max-width: 218px;
+    margin: auto;
+    position: relative;
+    z-index: 1000;
+}
+
+/* img {
+    width: 100%;
+} */
+
+.carousel {
+    overflow-x: scroll;
+    scroll-snap-type: x mandatory;
+}
+
+.card {
+    min-width: 382px;
+    scroll-snap-align: start;
+    margin-left: 24px;
+
+}
+
+.carousel-section {
+    padding-top: 27px;
+    padding-bottom: 100px
 }
