--- a/styles.css
+++ b/styles.css
@@ -23,10 +23,18 @@ div {
     padding-top: 0 !important;
 }
 
+.list-bottomsheet p {
+    color: #000 !important;
+    font-size: 14px;
+    padding: 10px 14px;
+}
+
 .list-bottomsheet .carousel-text {
     bottom: auto;
     font-size: 40px;
     color: #000;
+    padding: 10px 14px !important;
+    position: unset;
 }
 
 .card {
