--- a/magazine.css
+++ b/magazine.css
@@ -90,8 +90,14 @@ section {
 
 .cover-story {
     margin-top: -25px;
+    height: 85%;
 }
 
+.cover-story img {
+    height: 100%;
+    aspect-ratio: 0.58;
+    object-fit: cover;
+}
 
 /* html {
     background: #f2f2f2;
@@ -102,7 +108,7 @@ p {
 }
 
 .section:nth-of-type(1) {
-    padding: 17px 27px 63.5px 27px;
+    padding: 17px 27px 5px 27px;
 }
 
 .wealth-div {
@@ -360,7 +366,9 @@ section:nth-of-type(3) {
 #container {
     background: #F5F079;
     /* min-width: 400px; */
-    min-height: 500px;
+    /* min-height: 500px; */
+    max-height: 76%;
+    height: 100%;
     /* margin: auto; */
     /* margin-left: 50px; */
     position: relative;
@@ -368,7 +376,7 @@ section:nth-of-type(3) {
     flex-direction: column;
     align-items: flex-end;
     justify-content: flex-end;
-    margin-top: 50px
+    margin-top: 20px
 }
 
 
@@ -451,7 +459,7 @@ section:nth-of-type(3) {
     /* 36.68px */
     letter-spacing: -1.12px;
 
-    margin: 0px 32px 10px 32px;
+    margin: 10px 32px 10px 32px;
     opacity: 0;
     transition: opacity 1s ease-in-out;
 
@@ -501,23 +509,34 @@ section:nth-of-type(3) {
 
 .section.news {
     background: #F4F4F4;
-    padding: 49px 15px 70px 15px;
+    padding: 20px 15px 20px 15px;
     overflow: scroll;
 }
 
 
-card {
-    max-width: 358px;
+.card {
+    width: 90vw;
+    /* max-height: 80%; */
+
     background: #ccf4de;
     overflow: hidden;
     position: relative;
-    padding-bottom: 58px;
+    padding-bottom: 18px;
+    height: 80vh
+}
 
+.scrollable-section .small-heading {
+    padding-top: 20px;
+}
+
+.highcharts-container {
+    max-height: 80%;
+    height: 100% !important;
 }
 
 .card.equity {
     padding-bottom: 0;
-    min-height: 621px;
+    /* min-height: 621px; */
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -533,6 +552,11 @@ card {
 
 #highchart {
     margin-left: -17px;
+    margin-bottom: 20px;
+}
+
+#highchart div {
+    bottom: 20px
 }
 
 .number {
@@ -624,21 +648,17 @@ card {
 .bar-new {
     background: #CAF4B7;
     padding-bottom: 0;
-    max-height: 621px;
-    min-height: 621px;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     margin-top: 24px;
-
+    margin: 0 0 0 24px;
 }
 
 .bar-new svg {
     margin-top: 30px;
     margin-left: -50px;
 }
-
-
 
 #canvas {
     position: absolute;
@@ -672,15 +692,15 @@ card {
 }
 
 .card {
-    min-width: 382px;
+    min-width: 90vw;
     scroll-snap-align: start;
     margin-left: 24px;
 
 }
 
 .carousel-section {
-    padding-top: 27px;
-    padding-bottom: 100px
+    padding-top: 17px;
+    /* padding-bottom: 100px */
 }
 
 body {
